added ocr service

--- a/src/main/resources/templates/showresult.html
+++ b/src/main/resources/templates/showresult.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
-TODO
+<p th:text="*{picture.result}"></p>
 <div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
