--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -7,7 +7,7 @@
     <script src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="navbar navbar-default navbar-fixed-bottom" th:fragment="footer">
+    <div class="navbar navbar-default" th:fragment="footer">
         <div class="container">
             <p class="navbar-text">
                 by Benjamin Krenn &amp; Simone Hierhold &#64; University of Alcala 2016
