--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8"/>
     <title>File Upload</title>
     <link rel="stylesheet" href="/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/webjars/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="../static/css/upload.css" />
     <script src="/webjars/jquery/3.1.1-1/jquery.min.js"></script>
     <script src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"></script>
     <script type='text/javascript' src='../static/js/index.js' th:src='@{js/index.js}' defer=""></script>
@@ -35,6 +37,10 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div id="loadingContainer">
+        <i class="fa fa-spinner fa-pulse fa-3x fa-fw" id="loading"></i>
+        <span class="sr-only">Loading...</span>
     </div>
     <div th:replace="fragments/footer :: footer"></div>
 </body>
