--- a/src/main/resources/static/css/upload.css
+++ b/src/main/resources/static/css/upload.css
@@ -15,3 +15,10 @@
     height: 100%;
     z-index: 999;
 }
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1%;
+}
