--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,6 +17,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
+                <img src="../../static/img/logo_small.png" />
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h2 class="panel-title pull-left">Automatically Detect and Recognize Text in Natural Images</h2>
